<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aabbff"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:orientation="vertical" >
            
            
            <LinearLayout
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:background="#aabbff"
            	android:paddingBottom="2dp"
            	android:paddingTop="2dp" >

            	<TextView
               		android:id="@+id/textView3"
               		android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text="User："
                	android:textAppearance="?android:attr/textAppearanceSmall" />

            	<TextView
                	android:id="@+id/txt_user_name"
                	android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:text=" "
                	android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>
            
            <LinearLayout
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:background="#aabbff"
            	android:paddingBottom="2dp"
            	android:paddingTop="2dp" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Device Name："
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/txt_device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="#aaff66"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_time"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txt_now_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <DigitalClock
                android:id="@+id/DC1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="0.27"
                android:text=" " />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/textView1_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="This device does match the registed account."
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:visibility="visible" >

            <TextView
                android:id="@+id/txt_skew1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />            

        </LinearLayout>
 		<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:visibility="visible" >

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent_skew"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/txt_skew2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="#ff9291"
		    android:paddingBottom="5dp"
		    android:paddingTop="5dp"
		    android:visibility="visible" >

            <TextView
                android:id="@+id/txt_ultime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#77ddaa"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:visibility="visible" >

            <TextView
                android:id="@+id/txt_d1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="未新增裝置"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txt_d1_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="無資料"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#77ddaa"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:visibility="visible" >

            <TextView
                android:id="@+id/txt_d2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="未新增裝置"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txt_d2_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="無資料"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#77ddaa"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:visibility="visible" >

            <TextView
                android:id="@+id/txt_d3_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="未新增裝置"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txt_d3_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="無資料"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" >

            <EditText
                android:id="@+id/device_box"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <Button
                android:id="@+id/new_device_btn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="64dip"
                android:text="@string/new_device"
                android:textSize="16sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/so_btn"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/signout"
                android:textSize="16sp"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.24"
            android:visibility="visible" >

            <EditText
                android:id="@+id/cf_box"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:visibility="invisible" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btn_cc"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="傳送驗證碼"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txt_err_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>